Sonar coverage issue fix for ro-sp