@@ -370,14 +370,14 @@
                     <preparationGoals>package docker:push</preparationGoals>
                 </configuration>
             </plugin>
-                <plugin>
+                <!--<plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surefire.version}</version>
                     <configuration>
-                        <argLine>--add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.math=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.sql/java.sql=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.security.interfaces=ALL-UNNAMED --add-opens=java.base/java.security.spec=ALL-UNNAMED --add-opens=java.base/javax.crypto=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.management/javax.management=ALL-UNNAMED --add-opens=java.desktop/sun.font=ALL-UNNAMED --add-opens=java.base/sun.reflect.generics.parser=ALL-UNNAMED --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED --add-exports=java.base/sun.util.calendar=ALL-UNNAMED --add-exports=java.base/sun.security.action=ALL-UNNAMED --add-exports=java.xml/jdk.xml.internal=ALL-UNNAMED --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.time.format=ALL-UNNAMED -Dspring.profiles.active=test</argLine>
+                        <argLine>&#45;&#45;add-opens=java.base/java.io=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.lang=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.math=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.util=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.util.concurrent=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.net=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.text=ALL-UNNAMED &#45;&#45;add-opens=java.sql/java.sql=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.time=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.security=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.security.interfaces=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.security.spec=ALL-UNNAMED &#45;&#45;add-opens=java.base/javax.crypto=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.lang.reflect=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED &#45;&#45;add-opens=java.management/javax.management=ALL-UNNAMED &#45;&#45;add-opens=java.desktop/sun.font=ALL-UNNAMED &#45;&#45;add-opens=java.base/sun.reflect.generics.parser=ALL-UNNAMED &#45;&#45;add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED &#45;&#45;add-exports=java.base/sun.util.calendar=ALL-UNNAMED &#45;&#45;add-exports=java.base/sun.security.action=ALL-UNNAMED &#45;&#45;add-exports=java.xml/jdk.xml.internal=ALL-UNNAMED &#45;&#45;add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED &#45;&#45;add-opens=java.base/jdk.internal.misc=ALL-UNNAMED &#45;&#45;add-opens=java.base/sun.nio.ch=ALL-UNNAMED &#45;&#45;add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED &#45;&#45;add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED &#45;&#45;add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.nio=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.time.format=ALL-UNNAMED -Dspring.profiles.active=test</argLine>
                     </configuration>
-                </plugin>
+                </plugin>-->
             </plugins>
         <resources>
             <resource>
